<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTvTitle"
            style="@style/CustomTitleStyle" />

        <TextView
            android:id="@+id/idTvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lock_config_desc"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            style="@style/CustomCardViewStyle"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvPrimary"
                    style="@style/CustomTitleStyle"
                    android:text="@string/primary" />

                <TextView
                    android:id="@+id/idTvDefaultPrValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/idRgPrimaryValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/idEtPrimaryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/hint_min_max"
                    android:inputType="numberDecimal"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/idCvSecondaryDoor"
            style="@style/CustomCardViewStyle"
            android:layout_marginTop="32dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvSecondary"
                    style="@style/CustomTitleStyle"
                    android:text="@string/secondary" />

                <TextView
                    android:id="@+id/idTvDefaultSeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/idRgSecondaryValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/idEtSecondaryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:inputType="numberDecimal"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/idBtnCancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/button_background_color"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/idBtnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>