<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LockParametersActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/idSvParameter"
            android:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:queryHint="@string/search_parameter" />

        <LinearLayout
            android:id="@+id/idTvTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/primary"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/secondary"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvVoltage"
            style="@style/CustomCardViewStyle"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleVoltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_voltage"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleVoltage">

                    <TextView
                        android:id="@+id/idTvPrimaryVoltage"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/idTvSecondaryVoltage"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/idIbEditVoltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleVoltage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvType"
            style="@style/CustomCardViewStyle"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_type"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleType">

                    <TextView
                        android:id="@+id/idTvPrimaryType"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/idTvSecondaryType"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/idIbEditType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleType" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvKick"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleKick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_kick"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleKick">

                    <TextView
                        android:id="@+id/idTvPrimaryKick"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/idTvSecondaryKick"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/idIbEditKick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleKick" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvRelease"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_release"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/idTvRelease"
                    style="@style/CustomTextStyle.Bold"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleRelease" />

                <ImageButton
                    android:id="@+id/idIbEditRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleRelease" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvReleaseTime"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleReleaseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_release_time"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleReleaseTime">

                    <TextView
                        android:id="@+id/idTvPrimaryReleaseTime"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/idTvSecondaryReleaseTime"
                        style="@style/CustomTextStyle.Bold"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/idIbEditReleaseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleReleaseTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCvAngle"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/idTvTitleAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_angle"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/idTvAngle"
                    style="@style/CustomTextStyle.Bold"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/idTvTitleAngle" />

                <ImageButton
                    android:id="@+id/idIbEditAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/idTvTitleAngle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>